site features three sections and a selector for which animal you'd like to view

--- a/index.html
+++ b/index.html
@@ -13,17 +13,30 @@
     <div class="container">
       <h1>Animal Wiki</h1>
       <div class="">
+        <h4>Choose which animal you would like to learn about below!</h4>
+        <select class="selector">
+          <option>Turtles</option>
+          <option>Snakes</option>
+          <option>Insects</option>
+        </select>
         <div id="turtles">
           <h2>Turtles</h2>
           <img src="http://images.coplusk.net/project_images/174508/image/medium_102490_2F2014-06-11-172427-myrtle-in-a-bowser-sweater.jpg">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, consequatur! Doloribus perspiciatis est hic accusantium enim culpa provident itaque. Earum quos assumenda accusantium doloribus aliquid dolorem, voluptatem consequuntur suscipit Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae odit expedita repellat, quibusdam minima iure dolores hic voluptatum dolorum nemo delectus id suscipit aspernatur pariatur? Deserunt eum aut facere ab qui ad distinctio minima saepe quisquam harum hic, quis impedit blanditiis nihil corrupti sunt ullam quam omnis, inventore vel corporis. </p>
         </div>
       
-      <div id="snakes">
-      <h2>Snakes</h2>
-      <img src="https://66.media.tumblr.com/2b39cea9c89f6995ddb22d605b5123a7/tumblr_nv3qmaAiYq1tt762bo1_500.png">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit amet, itaque eum ea quam quis delectus maiores sunt, assumenda blanditiis provident. Enim voluptates quasi eligendi pariatur sapiente. Minus saepe dolorem quidem itaque dicta. Modi molestias numquam velit? Nesciunt amet ea dolorem reiciendis consequatur architecto, similique quibusdam non asperiores omnis?</p>
-      </div>
+        <div id="snakes">
+          <h2>Snakes</h2>
+          <img src="https://66.media.tumblr.com/2b39cea9c89f6995ddb22d605b5123a7/tumblr_nv3qmaAiYq1tt762bo1_500.png">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit amet, itaque eum ea quam quis delectus maiores sunt, assumenda blanditiis provident. Enim voluptates quasi eligendi pariatur sapiente. Minus saepe dolorem quidem itaque dicta. Modi molestias numquam velit? Nesciunt amet ea dolorem reiciendis consequatur architecto, similique quibusdam non asperiores omnis?</p>
+        </div>
+
+        <div id="Insects">
+          <h2>Insects</h2>
+          <img src="https://cdn.shopify.com/s/files/1/0399/8881/products/BugBafflerWomanShirtHoodOn_69195d9d-c731-4bcd-8586-022a741991a6_1024x1024.jpg?v=1397330911">
+          <p>"ew gross get away from me" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nobis, vel deleniti obcaecati natus, consequatur tempore velit, rerum illum nam eius asperiores quaerat veniam? Rerum similique nemo recusandae facilis fugit, aliquid quis impedit sapiente minus. Doloribus eveniet iusto eum asperiores eligendi unde, eos quasi eius recusandae veniam delectus sint, repudiandae animi, officia numquam porro ratione. Delectus molestias aliquid accusamus neque?
+          </p>
+        </div>
       </div>
     </div>
   </body>
