--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
       <h1>Animal Wiki</h1>
       <div class="">
         <h4>Choose which animal you would like to learn about below!</h4>
-        <select class="selector">
-          <option>Turtles</option>
-          <option>Snakes</option>
-          <option>Insects</option>
-        </select>
+        <form id="formGroup1">
+          <select id="selector">
+            <option value="turtle">Turtles</option>
+            <option value="snake">Snakes</option>
+            <option value="insect">Insects</option>
+          </select>
+          <br>
+          <button class="btn btn-danger" type="submit">Click here to reveal!</button>
+      </form>
         <div id="turtles">
           <h2>Turtles</h2>
           <img src="http://images.coplusk.net/project_images/174508/image/medium_102490_2F2014-06-11-172427-myrtle-in-a-bowser-sweater.jpg">
@@ -31,7 +35,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit amet, itaque eum ea quam quis delectus maiores sunt, assumenda blanditiis provident. Enim voluptates quasi eligendi pariatur sapiente. Minus saepe dolorem quidem itaque dicta. Modi molestias numquam velit? Nesciunt amet ea dolorem reiciendis consequatur architecto, similique quibusdam non asperiores omnis?</p>
         </div>
 
-        <div id="Insects">
+        <div id="insects">
           <h2>Insects</h2>
           <img src="https://cdn.shopify.com/s/files/1/0399/8881/products/BugBafflerWomanShirtHoodOn_69195d9d-c731-4bcd-8586-022a741991a6_1024x1024.jpg?v=1397330911">
           <p>"ew gross get away from me" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nobis, vel deleniti obcaecati natus, consequatur tempore velit, rerum illum nam eius asperiores quaerat veniam? Rerum similique nemo recusandae facilis fugit, aliquid quis impedit sapiente minus. Doloribus eveniet iusto eum asperiores eligendi unde, eos quasi eius recusandae veniam delectus sint, repudiandae animi, officia numquam porro ratione. Delectus molestias aliquid accusamus neque?
